Core/objects/Recommended_Badge_Mix__c/fields/FreeSFBenPracticeExam__c.field-meta.xml
<CustomField>
    <fullName>FreeSFBenPracticeExam__c</fullName>
    <description>URL to free practice exam on Salesforce Ben. Only applicable for exam badge mixes.</description>
    <label>Free Salesforce Ben Practice Exam</label>
    <type>Url</type>
</CustomField>