Core/objects/Recommended_Badge_Mix__c/fields/OfficialExamGuide__c.field-meta.xml
<CustomField>
    <fullName>OfficialExamGuide__c</fullName>
    <description>URL to official certification exam guide on Trailhead. Only applicable for exam badge mixes.</description>
    <label>Official Exam Guide</label>
    <type>Url</type>
</CustomField>