Core/objects/Recommended_Badge_Mix__c/fields/OfficialExamTrailmix__c.field-meta.xml
<CustomField>
    <fullName>OfficialExamTrailmix__c</fullName>
    <description>URL to official certification exam Trailmix on Trailhead. Only applicable for exam badge mixes.</description>
    <label>Official Exam Trailmix</label>
    <type>Url</type>
</CustomField>